--- a/styles.css
+++ b/styles.css
@@ -328,8 +328,7 @@ header {
 /* Título das Iniciativas */
 .initiatives-title {
     text-align: center;
-    margin-top: 20px;
-    width: 100%;
+    margin-bottom: 40px;
 }
 
 .initiatives-title h1 {
